--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.imgurisnotimgur">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +20,8 @@
         </activity>
         <activity android:name=".NoAuthActivity" />
         <activity android:name=".AuthenticationActivity" />
+        <activity android:name=".GalleryActivity" />
+        <activity android:name=".SubredditActivity"></activity>
     </application>
 
 </manifest>
