--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".NoAuthActivity" />
         <activity android:name=".AuthenticationActivity" />
         <activity android:name=".GalleryActivity" />
-        <activity android:name=".SubredditActivity"></activity>
+        <activity android:name=".SubredditActivity" />
+        <activity android:name=".UploadActivity"></activity>
     </application>
 
 </manifest>
