Added preferences activity back after removing it accidentally :facepalm:

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".SubredditActivity" />
         <activity android:name=".UploadActivity" />
         <activity android:name=".SearchActivity" />
+        <activity android:name=".PreferencesActivity" />
 
     </application>
 
