--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,3 +36,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.2'
     implementation 'com.android.support:cardview-v7:26.1.0'
 }
+
+androidExtensions {
+    experimental = true
+}
