--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".PreferencesActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".ImageDetailActivity" />
+        <activity android:name=".SubredditImageDetail"></activity>
     </application>
 
 </manifest>
