--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity android:name=".PreferencesActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".ImageDetailActivity" />
-        <activity android:name=".SubredditImageDetail"></activity>
+        <activity android:name=".SubredditImageDetail" />
     </application>
 
 </manifest>
