Added a better but STILL NOT DONE implementation of Upload notification.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,11 @@
         <activity android:name=".ImageDetailActivity" />
         <activity android:name=".SubredditImageDetail" />
 
+        <service
+            android:name=".NotificationIntents"
+            android:exported="false">
+        </service>
+
         <provider
             android:name=".data.ImgurProvider"
             android:authorities="com.imgurisnotimgur"
