--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,7 @@
 
         <service
             android:name=".NotificationIntents"
-            android:exported="false">
-        </service>
+            android:exported="false" />
 
         <provider
             android:name=".data.ImgurProvider"
@@ -52,12 +51,20 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <receiver
-            android:name=".background.ChargingListener">
+        <receiver android:name=".background.ChargingListener">
             <intent-filter>
                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
             </intent-filter>
         </receiver>
+
+        <service
+            android:name=".background.CommentListener"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
